# 1d_nodal_dg_project

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.hpp.in
.devcontainer/: Dockerfile  devcontainer.json
config/: parameters.conf
include/1d_nodal_dg_project/: parameters.hpp  utils.hpp
include/1d_nodal_dg_project/basis/: nodal_basis.hpp  nodal_basis_for_gauss_lobatto.hpp
include/1d_nodal_dg_project/discretization/: assemble_system.hpp  compute_error.hpp
include/1d_nodal_dg_project/grid/: nonuniform_grid.hpp  uniform_grid.hpp
include/1d_nodal_dg_project/io/: plot_solution.hpp
include/1d_nodal_dg_project/models/: diffusion_model.hpp
include/1d_nodal_dg_project/quadrature/: gauss_lobatto_weights.hpp  quadrature_gauss_lobatto.hpp
src/: ndg.cpp
tests/: CMakeLists.txt  test_discretization.cpp
tests/include/test_models/: discontinuous_diffusion_test_model.hpp  linear_test_model.hpp  quadratic_test_model.hpp
